align issue.

--- a/projects/rds-themes/styles/side-nav.scss
+++ b/projects/rds-themes/styles/side-nav.scss
@@ -26,7 +26,7 @@
 #sidebar.toggle {
   min-width: 80px;
   max-width: 80px;
-  text-align: center;
+  // text-align: center;
 }
 
 .nav.sidebar {
